force-app/main/default/objects/PAF_Package__c/PAF_Package__c.object-meta.xml
<CustomObject>
    <label>PAF Package</label>
    <nameField>
        <label>PAF Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PAF Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>