force-app/main/default/objects/PAF_Package__c/fields/Additional_3__c.field-meta.xml
<CustomField>
    <fullName>Additional_3__c</fullName>
    <label>Additional 3Hour($)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>