force-app/main/default/objects/PAF_Package__c/fields/Additional_KMs_Rate__c.field-meta.xml
<CustomField>
    <fullName>Additional_KMs_Rate__c</fullName>
    <label>Additional KMs Rate ($)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>