force-app/main/default/objects/PAF_Package__c/fields/ADL__c.field-meta.xml
<CustomField>
    <fullName>ADL__c</fullName>
    <label>ADL($)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>