force-app/main/default/objects/PAF_Package__c/fields/ADL_Surcharge_Applicable__c.field-meta.xml
<CustomField>
    <fullName>ADL_Surcharge_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ADL Surcharge Applicable</label>
    <type>Checkbox</type>
</CustomField>