force-app/main/default/objects/PAF_Package__c/fields/Adult_Fare_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Adult_Fare_Allocation__c</fullName>
    <label>Adult Fare Allocation($)</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>