force-app/main/default/objects/PAF_Package__c/fields/Adult_Total__c.field-meta.xml
<CustomField>
    <fullName>Adult_Total__c</fullName>
    <formula>Adult_Fare_Allocation__c 
+ 
(IF( TEXT(Stopover_Inclusion__c) = &quot;INC&quot; ,  Stopover_Allocation__c , 0))
 + 
(IF( TEXT(Transfer_Inclusion__c) = &quot;INC&quot;  ,  Transfers_Allocation__c , 0))
+
(IF( TEXT(Lounge_Inclusion__c) = &quot;INC&quot;   ,  Lounge_Allocation__c , 0))
+
(IF( TEXT(Insurance_Inclusion__c) = &quot;INC&quot;   ,  Insurance_Allocation__c , 0))
+
(IF( TEXT(Other_Inclusion__c) = &quot;INC&quot;  ,  Other_Allocation__c , 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adult Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>