force-app/main/default/objects/PAF_Package__c/fields/Airlines__c.field-meta.xml
<CustomField>
    <fullName>Airlines__c</fullName>
    <label>Airlines</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AC</fullName>
            </value>
            <value>
                <fullName>CX</fullName>
            </value>
            <value>
                <fullName>DL</fullName>
            </value>
            <value>
                <fullName>EK</fullName>
            </value>
            <value>
                <fullName>EY</fullName>
            </value>
            <value>
                <fullName>HA</fullName>
            </value>
            <value>
                <fullName>LA</fullName>
            </value>
            <value>
                <fullName>LH</fullName>
            </value>
            <value>
                <fullName>NZ</fullName>
            </value>
            <value>
                <fullName>SA</fullName>
            </value>
            <value>
                <fullName>SQ</fullName>
            </value>
            <value>
                <fullName>4C</fullName>
            </value>
            <value>
                <fullName>4M</fullName>
            </value>
            <value>
                <fullName>9W</fullName>
            </value>
            <value>
                <fullName>A3</fullName>
            </value>
            <value>
                <fullName>AA</fullName>
            </value>
            <value>
                <fullName>AF</fullName>
            </value>
            <value>
                <fullName>AI</fullName>
            </value>
            <value>
                <fullName>AM</fullName>
            </value>
            <value>
                <fullName>AR</fullName>
            </value>
            <value>
                <fullName>AY</fullName>
            </value>
            <value>
                <fullName>AZ</fullName>
            </value>
            <value>
                <fullName>BA</fullName>
            </value>
            <value>
                <fullName>CM</fullName>
            </value>
            <value>
                <fullName>CZ</fullName>
            </value>
            <value>
                <fullName>FJ</fullName>
            </value>
            <value>
                <fullName>GA</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>HX</fullName>
            </value>
            <value>
                <fullName>JJ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>