force-app/main/default/objects/PAF_Package__c/fields/AUS_Gateways__c.field-meta.xml
<CustomField>
    <fullName>AUS_Gateways__c</fullName>
    <label>AUS Gateways</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Aust_Gateways</valueSetName>
    </valueSet>
</CustomField>