force-app/main/default/objects/PAF_Package__c/fields/Business_Class_Upgrade_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Business_Class_Upgrade_Surcharge__c</fullName>
    <label>Business Class Upgrade Surcharge</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>