force-app/main/default/objects/PAF_Package__c/fields/Child_Fare_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Child_Fare_Allocation__c</fullName>
    <label>Child Fare Allocation($)</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>