force-app/main/default/objects/PAF_Package__c/fields/Child_Total__c.field-meta.xml
<CustomField>
    <fullName>Child_Total__c</fullName>
    <formula>Child_Fare_Allocation__c 
 + 
(IF( TEXT(Transfer_Inclusion__c) = &quot;INC&quot;  ,  10 , 0))
+
(IF( TEXT(Lounge_Inclusion__c) = &quot;INC&quot;  ,  Lounge_Allocation__c , 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Child Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>