force-app/main/default/objects/PAF_Package__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City(Tier 1)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>REGION__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>AAL</fullName>
            </value>
            <value>
                <fullName>AAR</fullName>
            </value>
            <value>
                <fullName>ABZ</fullName>
            </value>
            <value>
                <fullName>ACE</fullName>
            </value>
            <value>
                <fullName>ADA</fullName>
            </value>
            <value>
                <fullName>ADB</fullName>
            </value>
            <value>
                <fullName>AER</fullName>
            </value>
            <value>
                <fullName>AES</fullName>
            </value>
            <value>
                <fullName>AGP</fullName>
            </value>
            <value>
                <fullName>AHO</fullName>
            </value>
            <value>
                <fullName>AJA</fullName>
            </value>
            <value>
                <fullName>ALA</fullName>
            </value>
            <value>
                <fullName>ALC</fullName>
            </value>
            <value>
                <fullName>AMS</fullName>
            </value>
            <value>
                <fullName>ANR</fullName>
            </value>
            <value>
                <fullName>ARN</fullName>
            </value>
            <value>
                <fullName>ATH</fullName>
            </value>
            <value>
                <fullName>AYT</fullName>
            </value>
            <value>
                <fullName>BCN</fullName>
            </value>
            <value>
                <fullName>BDS</fullName>
            </value>
            <value>
                <fullName>BEG</fullName>
            </value>
            <value>
                <fullName>BES</fullName>
            </value>
            <value>
                <fullName>BFS</fullName>
            </value>
            <value>
                <fullName>BGO</fullName>
            </value>
            <value>
                <fullName>BGY</fullName>
            </value>
            <value>
                <fullName>BHD</fullName>
            </value>
            <value>
                <fullName>BHX</fullName>
            </value>
            <value>
                <fullName>BIA</fullName>
            </value>
            <value>
                <fullName>BIO</fullName>
            </value>
            <value>
                <fullName>BIQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>