force-app/main/default/objects/PAF_Package__c/fields/City_Tier_3__c.field-meta.xml
<CustomField>
    <fullName>City_Tier_3__c</fullName>
    <label>City(Tier 3)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>REGION__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>City</valueSetName>
    </valueSet>
</CustomField>