force-app/main/default/objects/PAF_Package__c/fields/High_Season1__c.field-meta.xml
<CustomField>
    <fullName>High_Season1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>High Season</label>
    <type>Checkbox</type>
</CustomField>