force-app/main/default/objects/PAF_Package__c/fields/High_Season_End3__c.field-meta.xml
<CustomField>
    <fullName>High_Season_End3__c</fullName>
    <label>High Season End3</label>
    <type>Date</type>
</CustomField>