force-app/main/default/objects/PAF_Package__c/fields/High_Season_Start2__c.field-meta.xml
<CustomField>
    <fullName>High_Season_Start2__c</fullName>
    <label>High Season Start2</label>
    <type>Date</type>
</CustomField>