force-app/main/default/objects/PAF_Package__c/fields/High_Season_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>High_Season_Surcharge__c</fullName>
    <label>High Season Surcharge</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>