force-app/main/default/objects/PAF_Package__c/fields/Included_Km__c.field-meta.xml
<CustomField>
    <fullName>Included_Km__c</fullName>
    <label>Included Km</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>