force-app/main/default/objects/PAF_Package__c/fields/Included_Nights__c.field-meta.xml
<CustomField>
    <fullName>Included_Nights__c</fullName>
    <label>Included Nights #</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>