force-app/main/default/objects/PAF_Package__c/fields/Infant_Total__c.field-meta.xml
<CustomField>
    <fullName>Infant_Total__c</fullName>
    <formula>Infant_Fare_Allocation__c
 + 
(IF( TEXT(Transfer_Inclusion__c) = &quot;INC&quot;   ,  10 , 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Infant Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>