force-app/main/default/objects/PAF_Package__c/fields/Insurance_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Allocation__c</fullName>
    <label>Insurance Allocation($)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>