force-app/main/default/objects/PAF_Package__c/fields/Insurance_PDS__c.field-meta.xml
<CustomField>
    <fullName>Insurance_PDS__c</fullName>
    <label>Insurance PDS</label>
    <type>Url</type>
</CustomField>