force-app/main/default/objects/PAF_Package__c/fields/Lounge__c.field-meta.xml
<CustomField>
    <fullName>Lounge__c</fullName>
    <label>Lounge Pass($)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>