force-app/main/default/objects/PAF_Package__c/fields/Lounge_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Lounge_Allocation__c</fullName>
    <label>Lounge Allocation($)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>