force-app/main/default/objects/PAF_Package__c/fields/Lounge_Inclusion__c.field-meta.xml
<CustomField>
    <fullName>Lounge_Inclusion__c</fullName>
    <label>Lounge Inclusion</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>INC</fullName>
            </value>
            <value>
                <fullName>OPT</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>