force-app/main/default/objects/PAF_Package__c/fields/Lounge_Pass_Description__c.field-meta.xml
<CustomField>
    <fullName>Lounge_Pass_Description__c</fullName>
    <label>Lounge Pass Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>