force-app/main/default/objects/PAF_Package__c/fields/Low_Season_Days__c.field-meta.xml
<CustomField>
    <fullName>Low_Season_Days__c</fullName>
    <formula>Low_Season_Start__c  -  Low_Season_End__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Low Season Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>