force-app/main/default/objects/PAF_Package__c/fields/Low_Season_End__c.field-meta.xml
<CustomField>
    <fullName>Low_Season_End__c</fullName>
    <label>Low Season End</label>
    <type>Date</type>
</CustomField>