force-app/main/default/objects/PAF_Package__c/fields/Low_Season_Start__c.field-meta.xml
<CustomField>
    <fullName>Low_Season_Start__c</fullName>
    <label>Low Season Start</label>
    <type>Date</type>
</CustomField>