force-app/main/default/objects/PAF_Package__c/fields/MEL__c.field-meta.xml
<CustomField>
    <fullName>MEL__c</fullName>
    <label>MEL($)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>