force-app/main/default/objects/PAF_Package__c/fields/MEL_SURCHARGE_APPLICABLE__c.field-meta.xml
<CustomField>
    <fullName>MEL_SURCHARGE_APPLICABLE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MEL Surcharge Applicable</label>
    <type>Checkbox</type>
</CustomField>