force-app/main/default/objects/PAF_Package__c/fields/Nett_Air__c.field-meta.xml
<CustomField>
    <fullName>Nett_Air__c</fullName>
    <label>Nett Air</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>