force-app/main/default/objects/PAF_Package__c/fields/PER__c.field-meta.xml
<CustomField>
    <fullName>PER__c</fullName>
    <label>PER($)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>