force-app/main/default/objects/PAF_Package__c/fields/PER_Surcharge_Applicablercharge_Applicab__c.field-meta.xml
<CustomField>
    <fullName>PER_Surcharge_Applicablercharge_Applicab__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PER Surcharge Applicable</label>
    <type>Checkbox</type>
</CustomField>