force-app/main/default/objects/PAF_Package__c/fields/PP_Name__c.field-meta.xml
<CustomField>
    <fullName>PP_Name__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PP Name</label>
    <type>Text</type>
</CustomField>