force-app/main/default/objects/PAF_Package__c/fields/Preferred_Seating__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Seating__c</fullName>
    <label>Preferred Seating</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>