force-app/main/default/objects/PAF_Package__c/fields/Qantas_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Qantas_Surcharge__c</fullName>
    <label>Qantas Surcharge</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>