force-app/main/default/objects/PAF_Package__c/fields/REGION__c.field-meta.xml
<CustomField>
    <fullName>REGION__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>North America</fullName>
            </value>
            <value>
                <fullName>South America</fullName>
            </value>
            <value>
                <fullName>Africa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>