force-app/main/default/objects/PAF_Package__c/fields/Sale_Period_Finish__c.field-meta.xml
<CustomField>
    <fullName>Sale_Period_Finish__c</fullName>
    <label>Sale Period - End</label>
    <required>true</required>
    <type>Date</type>
</CustomField>