force-app/main/default/objects/PAF_Package__c/fields/Sale_Period_Start__c.field-meta.xml
<CustomField>
    <fullName>Sale_Period_Start__c</fullName>
    <label>Sale Period - Start</label>
    <required>true</required>
    <type>Date</type>
</CustomField>