force-app/main/default/objects/PAF_Package__c/fields/Sale_Season_Base_Fare__c.field-meta.xml
<CustomField>
    <fullName>Sale_Season_Base_Fare__c</fullName>
    <label>Sale Season Base Fare</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>