force-app/main/default/objects/PAF_Package__c/fields/Sale_Season_Days__c.field-meta.xml
<CustomField>
    <fullName>Sale_Season_Days__c</fullName>
    <formula>Sale_Season_Start__c   -   Sale_Season_End__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sale Season Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>