force-app/main/default/objects/PAF_Package__c/fields/Sale_Season_End__c.field-meta.xml
<CustomField>
    <fullName>Sale_Season_End__c</fullName>
    <label>Sale Season End</label>
    <type>Date</type>
</CustomField>