force-app/main/default/objects/PAF_Package__c/fields/Sale_Season_Start__c.field-meta.xml
<CustomField>
    <fullName>Sale_Season_Start__c</fullName>
    <label>Sale Season Start</label>
    <type>Date</type>
</CustomField>