force-app/main/default/objects/PAF_Package__c/fields/Shoulder_Season_End__c.field-meta.xml
<CustomField>
    <fullName>Shoulder_Season_End__c</fullName>
    <label>Shoulder Season End</label>
    <type>Date</type>
</CustomField>