force-app/main/default/objects/PAF_Package__c/fields/Single_Supplement__c.field-meta.xml
<CustomField>
    <fullName>Single_Supplement__c</fullName>
    <label>Single SupplementPP/N($)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>