force-app/main/default/objects/PAF_Package__c/fields/Stopover__c.field-meta.xml
<CustomField>
    <fullName>Stopover__c</fullName>
    <label>Stopover Options</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AUH</fullName>
            </value>
            <value>
                <fullName>DXB</fullName>
            </value>
            <value>
                <fullName>HKG</fullName>
            </value>
            <value>
                <fullName>HNL</fullName>
            </value>
            <value>
                <fullName>SIN</fullName>
            </value>
            <value>
                <fullName>BKK</fullName>
            </value>
            <value>
                <fullName>NAN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>