force-app/main/default/objects/PAF_Package__c/fields/Stopover_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Stopover_Allocation__c</fullName>
    <label>Stopover Allocation($)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>