force-app/main/default/objects/PAF_Package__c/fields/Stopover_Cost__c.field-meta.xml
<CustomField>
    <fullName>Stopover_Cost__c</fullName>
    <label>Additional Nights - PP/N($)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>