force-app/main/default/objects/PAF_Package__c/fields/Stopover_Description__c.field-meta.xml
<CustomField>
    <fullName>Stopover_Description__c</fullName>
    <label>Stopover Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>