force-app/main/default/objects/PAF_Package__c/fields/Tier_3__c.field-meta.xml
<CustomField>
    <fullName>Tier_3__c</fullName>
    <label>Tier 3($)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>