force-app/main/default/objects/PAF_Package__c/fields/Tier_4__c.field-meta.xml
<CustomField>
    <fullName>Tier_4__c</fullName>
    <label>Tier 4($)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>