force-app/main/default/objects/PAF_Package__c/fields/Transfer_Description__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Description__c</fullName>
    <label>Transfer Description</label>
    <type>TextArea</type>
</CustomField>