force-app/main/default/objects/PAF_Package__c/fields/Transfer_Low_Shoulder_High__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Low_Shoulder_High__c</fullName>
    <label>Transfer- Low/Shoulder/High($)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>