force-app/main/default/objects/PAF_Package__c/fields/Transfers_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Transfers_Allocation__c</fullName>
    <label>Transfers Allocation($)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>