force-app/main/default/objects/PAF_Package__c/validationRules/Insurance_allocation.validationRule-meta.xml
<ValidationRule>
    <fullName>Insurance_allocation</fullName>
    <active>true</active>
    <description>Insurance allocation must be nominated if Insurance is an inclusion.</description>
    <errorConditionFormula>AND( TEXT(Insurance_Inclusion__c)  = &quot;INC&quot;  || TEXT(Insurance_Inclusion__c)  = &quot;OPT&quot;, ISBLANK( Insurance_Allocation__c ) )</errorConditionFormula>
    <errorDisplayField>Insurance_Allocation__c</errorDisplayField>
    <errorMessage>Insurance allocation must be nominated if Insurance is an inclusion.</errorMessage>
</ValidationRule>