force-app/main/default/objects/PAF_Package__c/validationRules/Stopover_allocation.validationRule-meta.xml
<ValidationRule>
    <fullName>Stopover_allocation</fullName>
    <active>true</active>
    <description>Stopover allocation must be nominated if stopover is an inclusion.</description>
    <errorConditionFormula>AND( TEXT(Stopover_Inclusion__c)  = &quot;INC&quot;  || TEXT(Stopover_Inclusion__c)  = &quot;OPT&quot;, ISBLANK( Stopover_Allocation__c )||  Stopover_Allocation__c  = 0 )</errorConditionFormula>
    <errorDisplayField>Stopover_Allocation__c</errorDisplayField>
    <errorMessage>Stopover allocation must be nominated if stopover is an inclusion.</errorMessage>
</ValidationRule>